--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,8 @@
 
-worker_processes  auto;
+# worker_processes  auto;
+worker_processes  1;
+master_process off;
+daemon off;
 
 error_log  logs/error.log  error;
 error_log  logs/error.log  notice;
@@ -8,8 +11,21 @@ error_log  logs/error.log  info;
 
 
 events {
-    use   epoll;
-    worker_connections  102400;
+    worker_connections  1024;
+}
+
+
+stream {
+
+    lua_package_path '/home/test/openresty/her/src/?.lua;/home/test/openresty/her/src/lib/?.lua;/home/test/openresty/her/src/lib/?/init.lua;/usr/local/openresty/lualib/?.lua;/usr/local/openresty/lualib/?.lua;;';
+
+    server {
+        listen 1234;
+
+        content_by_lua_block {
+            require('src.chat').go()
+        }
+    }
 }
 
 
@@ -18,7 +34,7 @@ http {
     include       mime.types;
     #default_type  application/octet-stream;
 
-    lua_package_path '/home/hehr/project/lua/her/src/?.lua;/home/hehr/project/lua/her/src/lib/?.lua;/home/hehr/project/lua/her/src/lib/?/init.lua;/usr/local/openresty/lualib/?.lua;/usr/local/openresty/lualib/?.lua;';
+    lua_package_path '/home/test/openresty/her/src/?.lua;/home/test/openresty/her/src/lib/?.lua;/home/test/openresty/her/src/lib/?/init.lua;/usr/local/openresty/lualib/?.lua;/usr/local/openresty/lualib/?.lua;;';
 
     #keepalive_timeout  65;
     lua_code_cache on;
@@ -37,6 +53,15 @@ http {
         
         }
 
+        ############ websocket chatroom ##############
+        location ~ /s/(.*) {
+
+            content_by_lua_file src/wschat/ws.lua;
+        }
+        #模拟登录，随机生成用户
+        location = /login {
+            content_by_lua_file src/wschat/login.lua;    
+        } 
 
        
     }
